# LangLens

./: .gitignore  .pre-commit-config.yaml  README.md  agent_script.py  build_ui.sh  generate_icons.js  json_callback_handler.py  multi_agent_script.py  multi_agent_sub_graph_script.py  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: release.yml
langlens/: __init__.py  callbacks.py  cli.py
langlens/viewer/: server.py
scripts/: package.sh
vscode-extension/: .vscodeignore  CHANGELOG.md  README.md  TROUBLESHOOTING.md  package.json  pnpm-lock.yaml
vscode-extension/src/: extension.ts
web-ui/: .gitignore  package.json  svelte.config.js  tailwind.config.js  vite.config.ts
web-ui/src/: app.css  app.d.ts  app.html
web-ui/src/lib/: DataViewer.svelte  LogParser.ts  TraceGraph.svelte  TreeNode.svelte  types.ts
web-ui/src/routes/: +page.svelte
web-ui/static/: workflow_log.json
